@@ -1,3 +1,4 @@
+2016-04-08 Fixed dragging element in Ordering module
 2016-04-08 Added french layout to Paragraph
 2016-04-08 Added list and combo views in Table of Contents module
 2016-04-07 Added exporting report to file in Print Report module
